--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <style>
-      @font-face {
-        font-family: UdemyFont;
-        src: url('./src/SuisseWorks-Bold-v1.woff2');
-      } 
-      *{
-        font-family: 'UdemyFont';
-      }
-    </style>
-    <title>React App</title>
+    <title>Udemy</title>
   </head>
   <body id="root" style="margin:0px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
