--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Udemy</title>
+    <title>Udedy</title>
   </head>
   <body id="root" style="margin:0px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
